--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : # example: "he/him"  
   bio              : "A junior undergraduate student at Harbin Institute of Technology, Shenzhen, who aspires to create impactful work."
   location         : "Shenzhen, China"
-  employer         : "Red Brick University"
+  employer         : "Harbin Institute of Technology, Shenzhen"
   uri              : # URL
   email            : "jrchennnn@foxmail.com" 
 
